--- a/_config.yml
+++ b/_config.yml
@@ -13,25 +13,25 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@example.com
+title: will minshew
+email: wminshew@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Blank, for now.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://www.willminshew.com" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: wminshew
+github_username:  wminshew
 
 # Build settings
 markdown: kramdown
 theme: jekyll-whiteglass
+# theme: minima
 plugins:
   - jekyll-feed
   - jekyll-archives
   - jekyll-paginate
   - jekyll-sitemap
+  
 
 permalink: /:year/:month/:day/:title/
 paginate_path: /posts/:num/
@@ -47,7 +47,7 @@ jekyll-archives:
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
-# exclude:
+exclude: [vendor]
 #   - Gemfile
 #   - Gemfile.lock
 #   - node_modules
