--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ script: ./script/cibuild
 # branch whitelist, only for GitHub Pages
 branches:
   only:
-  - master # test the master branch
+  - gh-pages # test the master branch
 
 env:
   global:
@@ -24,4 +24,4 @@ deploy:
   skip_cleanup: true
   github_token: $GITHUB_TOKEN # Set in travis-ci.org dashboard
   on:
-    branch: master
+    branch: gh-pages
