think the problem is with gh-pages lack of support for gem theme whiteglass

--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ github_username:  wminshew
 
 # Build settings
 markdown: kramdown
-theme: jekyll-whiteglass
-# theme: minima
+# theme: jekyll-whiteglass
+theme: minima
 plugins:
   - jekyll-feed
   - jekyll-archives
