--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ script: ./script/cibuild
 # branch whitelist, only for GitHub Pages
 branches:
   only:
-  - gh-pages # test the master branch
+  - master # test the master branch
 
 env:
   global:
