testing travis deployment -- says gh-pages branch not permitted.. but not sure why yet

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ script: ./script/cibuild
 # branch whitelist, only for GitHub Pages
 branches:
   only:
-  - master # test the master branch
+  - master
   - gh-pages
 
 env:
