testing travis deployment

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,6 @@ script: ./script/cibuild
 # branch whitelist, only for GitHub Pages
 branches:
   only:
-  - master
   - gh-pages
 
 env:
@@ -25,4 +24,4 @@ deploy:
   skip_cleanup: true
   github_token: $GITHUB_TOKEN # Set in travis-ci.org dashboard
   on:
-    branch: gh-pages
+    branch: master
