Removed boiler plate text, added Hello, World post and google analytics

--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,12 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://www.willminshew.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: wminshew
+twitter_image:
 github_username:  wminshew
+facebook_app_id:
+facebook_image:
+google_analytics: UA-107715418-1
+comments: true
 
 # Build settings
 markdown: kramdown
@@ -47,6 +52,7 @@ jekyll-archives:
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
+# vendor folder is used by travis-ci when building site to stash gem files in
 exclude: [vendor]
 #   - Gemfile
 #   - Gemfile.lock
