second post on personal constitutions, plus new tab in nav

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,5 +3,7 @@
 main:
   - title: "About"
     url: /about/
+  - title: "Principles"
+    url: /principles/
   - title: "Archives"
     url: /archives/
