added theme gems for travis build

--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ comments: true
 
 # Build settings
 markdown: kramdown
-# theme: jekyll-whiteglass
+theme: jekyll-whiteglass
 # theme: minima
 plugins:
   - jekyll-feed
