travis no longer pushing to gh-pages; unclear why, reverting changes back..

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,4 +26,4 @@ deploy:
   github_token: $GITHUB_TOKEN # Set in travis-ci.org dashboard
   keep-history: true
   on:
-    branch: gh-pages
+    branch: master
