trying to fix travis build; hadn't touched so not sure why isn't working..

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,8 +22,9 @@ env:
 deploy:
   provider: pages
   local-dir: _site
+  target-branch: gh-pages
+  keep-history: true
   skip_cleanup: true
   github_token: $GITHUB_TOKEN # Set in travis-ci.org dashboard
-  keep-history: true
   on:
     branch: master
